Fix bug: Add padding to ensure that content isn't covered with footer (especially smaller devices)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: #f2f1eb;
+    padding-bottom: 1em
 }
 
 .navbar {
